--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -56,7 +56,7 @@
         </div>
         <div class="form-group">
             <a th:href="@{/auth/changePassword}"
-               class="btnForgetPwd">Forget Password?</a><!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
+               class="btnForgetPwd">Forget Password?</a>
         </div>
     </form>
 </div>
